# confluence-integration

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PRODUCTION_GRADE_IMPROVEMENTS.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
confluence_integration/: __init__.py  __main__.py  permissions.py  reader.py
tests/: __init__.py  conftest.py  test_cli.py  test_permissions.py  test_reader.py
